# SINator-FireworksAI

./: .gitignore  AGENTS.md  BUGS_V18_ISSUES.md  CONFIGURATION.md  ERROR.md  ERROR_ANALYSIS.md  GMX_OOPIF_PROBLEM.md  INSTALL.md  PORT.md  PROBLEM.md  README.md  _ua_patch.doc.md  _ua_patch.py  anti-learn.md  banned.md  config.example.json  extract-gmx-cookies.js  fix.md  generate_10_keys.py  install-pool1.sh  install-pool2.sh  install-pool3.sh  install-router.sh  install.sh  issues.md  learn.md  llms.txt  opencode-config-install.sh  opencode-config-repair.sh  plan.md  pyproject.toml  requirements.txt  run-gmx-alias.js  run-gmx-cookies.js  sin_goal_mode.db  sinator-cli.spec  sinrules.md  successful.md  test-gmx-alias.js  test-gmx-final.js  (+4 more)
.gitnexus/: meta.json
.sin/: context.db  rollback.db
agent_toolbox/: .env.example  __init__.doc.md  __init__.py  command_registry.json  requirements.txt  start_toolbox.doc.md  start_toolbox.py
cloudflare/: README.md  schema.sql  worker.doc.md  worker.js  wrangler.toml
config/: fireworks-pool1.yaml  fireworks-pool2.yaml  fireworks-pool3.yaml  fireworks-router.yaml
data/: fireworksai-pool.json
debug/: check_gmx_alias_page.py  click_einstellungen_retry.py  click_email_einstellungen.py  click_services_dropdown.py  click_settings_gear.py  click_user_menu.py  click_weitere_einstellungen.py  debug_after_nav.py  debug_alias_nav.py  debug_email_click.py  debug_email_comprehensive.py  debug_email_deep.py  debug_email_strategies.py  debug_exact_js.py  debug_exact_link_click.py  debug_fetch_email.py  debug_fireworks_api_check.py  (+41 more)
(+183 files in other folders)
